tests/typing/bad/testfile-return-1.c
struct S { int a; };
struct S f() { return 1; }
int main() { }
